--- a/make/multi/Makefile.rules
+++ b/make/multi/Makefile.rules
@@ -1,6 +1,8 @@
+CXXFLAGS=-std=c++14
+LDFLAGS=-lm
 
 main: main.o circle_funcs.o
-	g++ -o main main.o circle_funcs.o
+	g++ $(LDFLAGS) -o main main.o circle_funcs.o
 
 main.o: main.cpp circle_funcs.h
         
